版本兼容